added own personPredicate